--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,11 @@
-version: '3.8'
-
-networks:
-  default:
+version: '3'
 
 services:
-  db:
+
+  mysql-development:
     image: mysql:latest
-    command: --default-authentication-plugin=mysql_native_password
-    ports:
-      - "3308:3306"
     environment:
       MYSQL_ROOT_PASSWORD: 1234
       MYSQL_DATABASE: christiansoe
+    ports:
+      - "3308:3306"
