--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://localhost:3309/christiansoe
 spring.datasource.username=root
 spring.datasource.password=1234
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
-logging.level.org.hibernate.SQL=debug
+spring.datasource.url=jdbc:mysql://localhost:3308/christiansoe
+spring.jackson.time-zone=UTC
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
+server.servlet.session.tracking-modes=cookie
