--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.url=jdbc:mysql://localhost:3308/christiansoe
+
 spring.jackson.time-zone=UTC
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jpa.properties.hibernate.format_sql=true
@@ -9,3 +10,8 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.sql.init.mode=always
 server.servlet.session.tracking-modes=cookie
+
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+#logging.level.org.hibernate.SQL=debug
+#
