--- a/website/package.json
+++ b/website/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "devDependencies": {
         "css-loader": "^6.5.1",
+        "navigo": "^8.11.1",
         "sass": "^1.44.0",
         "sass-loader": "^12.3.0",
         "style-loader": "^3.3.1",
