--- a/website/package.json
+++ b/website/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "build": "webpack",
-        "serve": "start http://localhost:3000/ && webpack serve"
+        "serve": "webpack serve --open"
     },
     "keywords": [],
     "author": "",
